demo prep for natwest